--- a/style.css
+++ b/style.css
@@ -1,106 +1,119 @@
 body {
-  font-family: "メイリオ", "Meiryo", sans-serif;
-  font-size: 14px;
-  margin: 0;
-  padding: 0;
+    font-family: "メイリオ", "Meiryo", sans-serif;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
 }
 
 .clear {
-  clear: both;
+    clear: both;
 }
 
 #header {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.00, #ffffff), color-stop(1.00, #e1eaff));
-  background: -webkit-linear-gradient(#ffffff, #e1eaff);
-  background: -moz-linear-gradient(#ffffff, #e1eaff);
-  background: -o-linear-gradient(#ffffff, #e1eaff);
-  background: -ms-linear-gradient(#ffffff, #e1eaff);
-  background: linear-gradient(#ffffff, #e1eaff);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.00, #ffffff), color-stop(1.00, #e1eaff));
+    background: -webkit-linear-gradient(#ffffff, #e1eaff);
+    background: -moz-linear-gradient(#ffffff, #e1eaff);
+    background: -o-linear-gradient(#ffffff, #e1eaff);
+    background: -ms-linear-gradient(#ffffff, #e1eaff);
+    background: linear-gradient(#ffffff, #e1eaff);
 }
 
 #header_content {
-  width: 650px;
-  margin: 0 auto;
+    width: 650px;
+    margin: 0 auto;
 }
 
 #title {
-  margin: 10px;
-  font-size: 34px;
-  text-shadow: 2px 2px 4px #aaa;
-  color: #00286a;
-  float: left;
+    margin: 10px;
+    font-size: 34px;
+    text-shadow: 2px 2px 4px #aaa;
+    color: #00286a;
+    float: left;
+}
+
+#followtumblr {
+    float: left;
+    margin-top: 22px;
+    margin-left: 5px;
 }
 
 #user {
-  float: right;
-  text-align: right;
-  margin-top: 25px;
-  margin-right: 10px;
+    float: right;
+    text-align: right;
+    margin-top: 25px;
+    margin-right: 10px;
 }
 
 #content {
-  width: 600px;
-  margin: 0 auto;
+    width: 600px;
+    margin: 0 auto;
 }
 
 h2 {
-  font-size: 18px;
-  width: 70%;
-  border-style: none none dashed dashed;
-  border-width: 1pt;
-  border-color: #668eff;
-  padding: 3px;
+    font-size: 18px;
+    width: 70%;
+    border-style: none none dashed dashed;
+    border-width: 1pt;
+    border-color: #668eff;
+    padding: 3px;
 }
 
 a {
-  color: #668eff;
-  text-decoration: none;
+    color: #668eff;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 #feeds {
-  text-align: center;
+    text-align: center;
 }
 
 #feeds li {
-  display: inline-block;
-  margin: 5px 8px;
+    display: inline-block;
+    margin: 5px 8px;
 }
 
 #feeds li a {
-  background-image: url("img/feed-icon-28x28.png");
-  background-size: 17px 17px;
-  background-repeat: no-repeat;
-  padding-left: 20px;
+    background-image: url("img/feed-icon-28x28.png");
+    background-size: 17px 17px;
+    background-repeat: no-repeat;
+    padding-left: 20px;
 }
 
 #footer {
-  width: 600px;
-  margin: 20px auto;
+    width: 600px;
+    margin: 20px auto;
 }
 
 #copyright {
-  float: right;
-  font-size: 12px;
-  text-align: right;
+    float: right;
+    font-size: 12px;
+    text-align: right;
 }
 
 #share {
-  float: left;
-  margin-bottom: 20px;
+    float: left;
+    margin: 0 0 20px;
+    padding: 0;
+    list-style: none;
+}
+
+#share > li {
+    margin: 0;
+    padding: 0;
+    float: left;
 }
 
 img {
-  border: solid 1pt Silver;
+    border: solid 1pt Silver;
 }
 
 .twlink {
-    background-image: url("img/twitter-bird-light-bgs.png");
-    background-size: 26px 26px;
+    background-image: url("img/bird_blue_16.png");
     background-repeat: no-repeat;
-    background-position: -3px -3px;
-    padding-left: 20px;
+    background-position: 0px 4px;
+    padding-left: 16px;
 }
