--- a/tbrfeed/templates/unlogin.html
+++ b/tbrfeed/templates/unlogin.html
@@ -7,6 +7,11 @@
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet" />
         <meta name="keywords" content="Tumblr,フィード,RSS" />
         <meta name="description" content="Tumblr のダッシュボードを RSS, Atom に変換するツール" />
+        <meta property="og:title" content="TbrFeed" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="{{ url_for('index') }}" />
+        <meta property="og:site_name" content="TbrFeed" />
+        <meta property="og:description" content="Tumblr のダッシュボードを RSS, Atom に変換するツール" />
         <script type="text/javascript">
 
             var _gaq = _gaq || [];
